--- a/VicUniIndustryProject2025LiveKit/appsettings.json
+++ b/VicUniIndustryProject2025LiveKit/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=tcp:tan25-server.database.windows.net,1433;Initial Catalog=ChatServer; Authentication=Active Directory Default; Encrypt=True;Connection Timeout=30;"
+        "DefaultConnection": "Data Source=tcp:tan25-server.database.windows.net,1433;Initial Catalog=ChatServer; Authentication=Active Directory Managed Identity; Encrypt=True;Connection Timeout=30;"
     }
 }
 
