refactor to new database

--- a/VicUniIndustryProject2025LiveKit/appsettings.json
+++ b/VicUniIndustryProject2025LiveKit/appsettings.json
@@ -9,7 +9,8 @@
 
     "ConnectionStrings": {
         //"DefaultConnection": "Data Source=tcp:tan25-server.database.windows.net,1433;Initial Catalog=ChatServer; Authentication=Active Directory Default; Encrypt=True;Connection Timeout=30;",
-        "DefaultConnection": "Server=tcp:tan25-server.database.windows.net,1433;Initial Catalog=ChatServer;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+        //"DefaultConnection": "Server=tcp:tan25-server.database.windows.net,1433;Initial Catalog=ChatServer;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";",
+        "DefaultConnection": "Server=tcp:mypjdatabase.database.windows.net,1433;Initial Catalog=ChatDatabase;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
     }
 }
 
